--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,6 +32,12 @@
         <activity android:name=".activities.SignUpActivity"></activity>
         <activity android:name=".activities.DashboardActivity"></activity>
         <activity android:name=".activities.AdminActivity"></activity>
+        <activity android:name=".activities.ProfileActivity"></activity>
+        <activity android:name=".activities.ChatActivity"></activity>
+        <activity android:name=".activities.EventsActivity"></activity>
+        <activity android:name=".activities.QuizActivity"></activity>
+
+
     </application>
 
 </manifest>
