--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,17 +8,15 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
-
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:usesCleartextTraffic="true"
         android:theme="@style/Theme.CADR"
-        >
-
+        android:usesCleartextTraffic="true">
+        <activity android:name=".activities.EditProfileActivity"></activity>
         <activity android:name=".activities.SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -26,18 +24,16 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activities.MainActivity"></activity>
-        <activity android:name=".activities.AccountActivity"></activity>
-        <activity android:name=".activities.LoginActivity"></activity>
-        <activity android:name=".activities.SignUpActivity"></activity>
-        <activity android:name=".activities.DashboardActivity"></activity>
-        <activity android:name=".activities.AdminActivity"></activity>
-        <activity android:name=".activities.ProfileActivity"></activity>
-        <activity android:name=".activities.ChatActivity"></activity>
-        <activity android:name=".activities.EventsActivity"></activity>
-        <activity android:name=".activities.QuizActivity"></activity>
-
-
+        <activity android:name=".activities.MainActivity" />
+        <activity android:name=".activities.AccountActivity" />
+        <activity android:name=".activities.LoginActivity" />
+        <activity android:name=".activities.SignUpActivity" />
+        <activity android:name=".activities.DashboardActivity" />
+        <activity android:name=".activities.AdminActivity" />
+        <activity android:name=".activities.ProfileActivity" />
+        <activity android:name=".activities.ChatActivity" />
+        <activity android:name=".activities.EventsActivity" />
+        <activity android:name=".activities.QuizActivity" />
     </application>
 
 </manifest>
